tests/cases/fail/float_modulo.u
import sti.

-> main() {
  float32 a = 5.0f.
  float32 b = 2.0f.
  float32 c = a % b.
  sti<->print(c).
}
